--- a/index.html
+++ b/index.html
@@ -12,106 +12,138 @@
 
 <body>
     <div id="app">
-        <div class="control">
-            <input type="text" class="search" v-model="filterText"/>
-            <div>
-                <span class="option" v-for="(option,index) in controlOptions" :class="{'active':addClassActive[index]}"
-                    @click="changBySex(index)"
-                >{{ option }}</span>
-            </div>
+        <div class="store">
+            <input type="checkbox" class="select-all" v-model="checkedAll">
+            <span class="store-name">Tscn教育前端</span>
         </div>
-        <ul>
-            <li class="person" v-for="person in personList" :key="person.id">
-                <div class="avatar">
-                    <img :src="person.src" :alt="person.name">
+        <ul class="course-list">
+            <li class="course" v-for="course in courseList" :key="course.id">
+                <!-- v-model 是否选中 -->
+                <input type="checkbox" class="course-radio" v-model="course.checked" />
+                <div class="poster">
+                    <img :src="course.poster" :alt="course.title">
                 </div>
                 <div class="content">
-                    <span class="name">{{person.name}}</span>
-                    <span class="des">{{person.des}}</span>
+                    <div class="title">{{ course.title }}</div>
+                    <div class="price-container">
+                        <div class="price">¥{{course.price}}</div>
+                        <div class="control-cart">
+                            <button class="minus-cart" @click="controlCart('-',course)">-</button>
+                            <!-- 显示只有一个 -->
+                            <input type="text" class="cart-num" v-model.number="course.cart">
+                            <button class="add-cart" @click="controlCart('+',course)">+</button>
+                        </div>
+                    </div>
                 </div>
             </li>
-
         </ul>
+        <div class="control">
+            <div class="select">
+                <input type="checkbox" class="select-all" v-model="checkedAll">
+                <span>全选</span>
+            </div>
+            <div class="price-container">
+                <span>合计: </span>
+                <span class="price">¥{{ selectTotalPrice }}</span>
+                <button class="accounts">结算({{selectList.length}})</button>
+            </div>
+        </div>
     </div>
     <script>
         const vm = new Vue({
             el: '#app',
             data: {
-                filterText:'',
-                addClassActive:[false,false,false],
-                controlOptions: ['Male', 'Famel', 'All'],
-                sex:['m','f'],
-                personArr: [{
-                        name: '王港',
-                        src: 'https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=4005587090,2408158268&fm=26&gp=0.jpg',
-                        des: '颈椎不好',
-                        sex: 'm',
-                        id: '056482'
+                
+                courseList: [{
+                        poster: 'https://img.alicdn.com/bao/uploaded/i1/TB1VtAgdlWD3KVjSZFs3KIqkpXa_040950.jpg_80x80.jpg',
+                        title: '渡一教育 CSS3 深度剖析',
+                        price: 1299,
+                        cart: 1,
+                        id: 0
                     },
                     {
-                        name: '刘莹',
-                        src: 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1571915784984&di=a0056fd06188e87b922c60878e5ce6e2&imgtype=0&src=http%3A%2F%2Fpic.51yuansu.com%2Fpic3%2Fcover%2F03%2F79%2F64%2F5c05df1faf3b7_610.jpg',
-                        des: '我是谁',
-                        sex: 'f',
-                        id: '157894'
+                        poster: 'https://img.alicdn.com/bao/uploaded/i7/TB1_VJecBWD3KVjSZKPagip7FXa_045814.jpg_80x80.jpg',
+                        title: '渡一教育 移动端开发课程',
+                        price: 1148,
+                        cart: 1,
+                        id: 1595402664708
                     },
                     {
-                        name: '刘秀莹',
-                        src: 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1571915803971&di=47dc968f55b16a461de3e8f25bdf8600&imgtype=0&src=http%3A%2F%2Fimg.duoziwang.com%2F2016%2F11%2F27%2F190426198344.jpg',
-                        des: '我长得很好看',
-                        sex: 'm',
-                        id: '2849245'
+                        poster: 'https://img.alicdn.com/bao/uploaded/i2/TB1J.Q4cQxz61VjSZFto7uDSVXa_010347.jpg_80x80.jpg',
+                        title: '渡一教育 2019年 HTMLCSS零基础入学宝典',
+                        price: 1,
+                        cart: 1,
+                        id: 1596305473062
                     },
                     {
-                        name: '刘金雷',
-                        src: 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1571915748758&di=5be825da4d37bcc21959946c101d5609&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201707%2F19%2F20170719211350_4PnBt.jpeg',
-                        des: '你没有见过陌生的脸',
-                        sex: 'm',
-                        id: '348515'
+                        poster: 'https://img.alicdn.com/bao/uploaded/i2/TB1bHwlaCWD3KVjSZSgVbgCxVXa_032434.jpg_80x80.jpg',
+                        title: '渡一教育 Web前端开发JavaScriptJs课',
+                        price: 1,
+                        cart: 1,
+                        id: 1595413512182
                     },
                     {
-                        name: '刘飞翔',
-                        src: 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1571915762633&di=49517ca62ecddb638cdfb2158a64e39a&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201702%2F05%2F20170205222154_WLdJS.jpeg',
-                        des: '瓜皮刘',
-                        sex: 'm',
-                        id: '478454'
-                    }
-                ],
+                        poster: 'https://img.alicdn.com/bao/uploaded/i2/TB1MJd3g4z1gK0jSZSgnHevwpXa_014447.jpg_80x80.jpg',
+                        title: 'Web前端开发高级工程师全阶班【渡一教育】',
+                        price: 12798,
+                        cart: 1,
+                        id: 1596302161181
+                    },
+                    {
+                        poster: 'https://img.alicdn.com/bao/uploaded/i6/TB1xPeAbwaH3KVjSZFpjaLhKpXa_105848.jpg_80x80.jpg',
+                        title: '渡一教育 Java零基础入门到精通（集合，泛型等）',
+                        price: 1,
+                        cart: 1,
+                        id: 1596300025301,
+                    },
+                ]
             },
-            methods:{
-                changBySex(index){
-                    //如果已经是true就什么都不做
-                    if(this.addClassActive[index]){
-                        return;
-                    }
-                    for (let i = 0; i < this.addClassActive.length; i++) {
-                        this.addClassActive[i] = false;
-                    }
-                    this.addClassActive.splice(index,1,true);
-                    //不会重新渲染
-                    this.sex.length = 0;
-                    if(index == 0){
-                        //会重新渲染
-                        this.sex.push('m');
-                    } else if(index == 1){
-                        this.sex.push('f');
-                    } else if(index == 2){
-                        this.sex.push('m','f');
+            computed: {
+                selectList: function () {
+                    // 选中的course
+                    return this.courseList.filter(course => course.checked);
+                },
+                selectTotalPrice: function () {
+                    let price = 0;
+                    this.selectList.forEach(course => price += course.price * course.cart);
+                    return price;
+                },
+                // checkedAll: function(){
+                //     return this.courseList.every((course) =>{
+                //         return course.checked;
+                //     })
+                // }
+                // 全选功能
+                checkedAll:{
+                    get(){
+                        //数组的每一个
+                        return this.courseList.every((course) =>{
+                        return course.checked;
+                    })
+                    },
+                    set(val){
+                        this.courseList.forEach(course =>{
+                            course.checked = val;
+                        })
                     }
                 }
             },
-            computed:{
-                personList(){
-                    const {filterText,personArr,sex} = this;
-                    //filter返回一个判断为true新的数组
-                    return personArr.filter((item)=>{
-                        // console.log(item.name.includes(filterText));
-                        //字符串.includes() 数组.includes()
-                        return item.name.includes(filterText) && sex.includes(item.sex);
-                    })
+            methods: {
+                controlCart(type, course) {
+                    if (type === '-') {
+                        if (course.cart === 1) {
+                            alert('不能再减了,亲')
+                        } else {
+                            course.cart--;
+                        }
+                    } else {
+                        course.cart++;
+                    }
                 }
             }
-        })
+        });
+        vm.courseList.forEach(course => vm.$set(course, 'checked', false));
+        // console.log(vm.courseList)
     </script>
 </body>
 
