--- a/index.html
+++ b/index.html
@@ -7,143 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="./vue.js"></script>
-    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <div id="app">
-        <div class="store">
-            <input type="checkbox" class="select-all" v-model="checkedAll">
-            <span class="store-name">Tscn教育前端</span>
-        </div>
-        <ul class="course-list">
-            <li class="course" v-for="course in courseList" :key="course.id">
-                <!-- v-model 是否选中 -->
-                <input type="checkbox" class="course-radio" v-model="course.checked" />
-                <div class="poster">
-                    <img :src="course.poster" :alt="course.title">
-                </div>
-                <div class="content">
-                    <div class="title">{{ course.title }}</div>
-                    <div class="price-container">
-                        <div class="price">¥{{course.price}}</div>
-                        <div class="control-cart">
-                            <button class="minus-cart" @click="controlCart('-',course)">-</button>
-                            <!-- 显示只有一个 -->
-                            <input type="text" class="cart-num" v-model.number="course.cart">
-                            <button class="add-cart" @click="controlCart('+',course)">+</button>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul>
-        <div class="control">
-            <div class="select">
-                <input type="checkbox" class="select-all" v-model="checkedAll">
-                <span>全选</span>
-            </div>
-            <div class="price-container">
-                <span>合计: </span>
-                <span class="price">¥{{ selectTotalPrice }}</span>
-                <button class="accounts">结算({{selectList.length}})</button>
-            </div>
-        </div>
+        {{ msg }}
     </div>
     <script>
         const vm = new Vue({
             el: '#app',
-            data: {
-                
-                courseList: [{
-                        poster: 'https://img.alicdn.com/bao/uploaded/i1/TB1VtAgdlWD3KVjSZFs3KIqkpXa_040950.jpg_80x80.jpg',
-                        title: '渡一教育 CSS3 深度剖析',
-                        price: 1299,
-                        cart: 1,
-                        id: 0
-                    },
-                    {
-                        poster: 'https://img.alicdn.com/bao/uploaded/i7/TB1_VJecBWD3KVjSZKPagip7FXa_045814.jpg_80x80.jpg',
-                        title: '渡一教育 移动端开发课程',
-                        price: 1148,
-                        cart: 1,
-                        id: 1595402664708
-                    },
-                    {
-                        poster: 'https://img.alicdn.com/bao/uploaded/i2/TB1J.Q4cQxz61VjSZFto7uDSVXa_010347.jpg_80x80.jpg',
-                        title: '渡一教育 2019年 HTMLCSS零基础入学宝典',
-                        price: 1,
-                        cart: 1,
-                        id: 1596305473062
-                    },
-                    {
-                        poster: 'https://img.alicdn.com/bao/uploaded/i2/TB1bHwlaCWD3KVjSZSgVbgCxVXa_032434.jpg_80x80.jpg',
-                        title: '渡一教育 Web前端开发JavaScriptJs课',
-                        price: 1,
-                        cart: 1,
-                        id: 1595413512182
-                    },
-                    {
-                        poster: 'https://img.alicdn.com/bao/uploaded/i2/TB1MJd3g4z1gK0jSZSgnHevwpXa_014447.jpg_80x80.jpg',
-                        title: 'Web前端开发高级工程师全阶班【渡一教育】',
-                        price: 12798,
-                        cart: 1,
-                        id: 1596302161181
-                    },
-                    {
-                        poster: 'https://img.alicdn.com/bao/uploaded/i6/TB1xPeAbwaH3KVjSZFpjaLhKpXa_105848.jpg_80x80.jpg',
-                        title: '渡一教育 Java零基础入门到精通（集合，泛型等）',
-                        price: 1,
-                        cart: 1,
-                        id: 1596300025301,
-                    },
-                ]
+            data:{
+                msg:'hello'
             },
-            computed: {
-                selectList: function () {
-                    // 选中的course
-                    return this.courseList.filter(course => course.checked);
-                },
-                selectTotalPrice: function () {
-                    let price = 0;
-                    this.selectList.forEach(course => price += course.price * course.cart);
-                    return price;
-                },
-                // checkedAll: function(){
-                //     return this.courseList.every((course) =>{
-                //         return course.checked;
-                //     })
-                // }
-                // 全选功能
-                checkedAll:{
-                    get(){
-                        //数组的每一个
-                        return this.courseList.every((course) =>{
-                        return course.checked;
-                    })
-                    },
-                    set(val){
-                        this.courseList.forEach(course =>{
-                            course.checked = val;
-                        })
-                    }
-                }
-            },
-            methods: {
-                controlCart(type, course) {
-                    if (type === '-') {
-                        if (course.cart === 1) {
-                            alert('不能再减了,亲')
-                        } else {
-                            course.cart--;
-                        }
-                    } else {
-                        course.cart++;
-                    }
+            watch:{
+                msg:function(newVal,oldVal){
+                    console.log(newVal,oldVal);
                 }
             }
-        });
-        vm.courseList.forEach(course => vm.$set(course, 'checked', false));
-        // console.log(vm.courseList)
+        })
+    
     </script>
 </body>
 
